--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -104,6 +104,41 @@
             "placeholders": {
                 "createPost": "What's on your mind?"
             }
+        },
+        "articles": {
+            "labels": {
+                "articles": "Articles",
+                "estTime": "Est. Time:",
+                "noArticles": "No articles found"
+            },
+            "buttons": {
+                "read": "Read"
+            }
+        },
+        "events": {
+            "labels": {
+                "events": "Events",
+                "upcoming": "Upcoming Events",
+                "noEvents": "No events found"
+            },
+            "buttons": {
+                "interested": "Interested"
+            }
+        },
+        "jobs": {
+            "labels": {
+                "jobs": "Jobs",
+                "findJobs": "Find jobs the easy way",
+                "subtitle": "Broaden your job search with curated collections",
+                "filters": "Filters",
+                "jobType": "Job Type",
+                "salaryRange": "Salary Range",
+                "topCompanies": "Top Companies",
+                "noJobs": "No jobs found matching your criteria"
+            },
+            "buttons": {
+                "apply": "Apply Now"
+            }
         }
     }
 }
